--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/Dev-Amir/git-hooks/issues"
   },
-  "homepage": "https://github.com/Dev-Amir/git-hooks#readme"
+  "homepage": "https://github.com/Dev-Amir/git-hooks#readme",
+  "devDependencies": {
+    "@frontendmonster/eslint-config": "^4.0.4",
+    "eslint": "^7.20.0",
+    "prettier": "^2.2.1"
+  }
 }
